--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,13 @@
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
     "test": "node test-endpoints.js",
-    "test:endpoints": "node test-endpoints.js"
+    "test:endpoints": "node test-endpoints.js",
+    "test:database": "node test-database.js",
+    "db:migrate": "npx sequelize-cli db:migrate --config database/config.json --migrations-path database/migrations",
+    "db:migrate:undo": "npx sequelize-cli db:migrate:undo --config database/config.json --migrations-path database/migrations",
+    "db:seed": "npx sequelize-cli db:seed:all --config database/config.json --seeders-path database/seeders",
+    "db:seed:undo": "npx sequelize-cli db:seed:undo:all --config database/config.json --seeders-path database/seeders",
+    "db:reset": "npm run db:migrate:undo && npm run db:migrate && npm run db:seed"
   },
   "keywords": [
     "todo",
@@ -19,10 +25,13 @@
   "author": "jesuscorral",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "helmet": "^7.1.0",
-    "dotenv": "^16.3.1"
+    "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.3",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
